--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header id="header">
-	<a href="{{ site.baseurl }}">
-		<img src="{{ "/img/emerald.svg" | prepend: site.baseurl | replace: '//', '/' }}" alt="Emerald Logo">
-	  <h1>emerald</h1>
-	</a>
+  <div>
+    <a href="/">
+      <img src="{{ "/img/logo.png" | prepend: site.baseurl | replace: '//', '/'
+      }}" alt="Prose Prism Logo">
+    </a>
+  </div>
 </header>
