--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,16 @@
 
 <body>
 	<div id="wrap">
-	  	
-	  	<!-- Navigation -->
-	  	{% include menu.html %}
     
-    <!-- Icon menu -->
-	  <a {% if site.reverse == true %}id="nav-menu-left"{% else %}id="nav-menu"{% endif %}>
-	  	<div id="menu"></div>
-	  </a>
+    <div class="topbar">
+
+        <!-- Navigation -->
+      {% include menu.html %}
+      
+      <!-- Icon menu -->
+      <a {% if site.reverse == true %}id="nav-menu-left"{% else %}id="nav-menu"{% endif %}>
+        <div id="menu"></div>
+      </a>
 
       <!-- Header -->
       {% if site.custom_header == true %}
@@ -20,6 +22,8 @@
       {% else %}
         {% include header.html %}
       {% endif %}
+      
+	  </div>
 
     <!-- Main content -->
 	  <div id="container">
