--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,13 +1,15 @@
 /* -- General Layout -- */
 
 /* Required for footer to stick to the bottom */
-html, body {
-	height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 /* Navigation */
 
-#nav, #nav-left { 
+#nav,
+#nav-left {
   a {
     display: block;
     color: $background-color;
@@ -22,8 +24,8 @@ html, body {
     }
   }
   span {
-      font-weight: 200;
-    }
+    font-weight: 200;
+  }
 }
 
 #nav {
@@ -48,7 +50,7 @@ html, body {
 
 #nav-list:after {
   display: block;
-  content: '';
+  content: "";
   width: 5rem;
   height: 1px;
   margin: 23px auto;
@@ -70,7 +72,8 @@ html, body {
   width: 1.5em;
   background-color: lighten($text-color, 35%);
   margin-top: 8px;
-  &:after, &:before {
+  &:after,
+  &:before {
     content: "";
     display: block;
     position: relative;
@@ -91,17 +94,17 @@ html, body {
   &.btn-close:before {
     top: 0;
     -webkit-transform: rotate(-45deg);
-       -moz-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-            transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
     background-color: $background-color;
   }
   &.btn-close:after {
     top: -4px;
     -webkit-transform: rotate(45deg);
-       -moz-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
     background-color: $background-color;
   }
 }
@@ -117,34 +120,34 @@ html, body {
 }
 
 #container {
-	margin:0 auto;
-	max-width: 730px;
-	padding: 0 1.5rem;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 0 1.5rem;
 }
 
 #header {
-	text-align: center;
+  text-align: center;
   padding: 24px 0;
   position: relative;
   a {
-  	text-decoration: none;
-  	color: $text-color;
-  	display: inline-block;
+    text-decoration: none;
+    color: $text-color;
+    display: inline-block;
   }
   img {
-  	max-height: 72px;
-  	margin: 0 auto;
-  	display: block;
+    max-height: 96px;
+    margin: 0 auto;
+    display: block;
   }
   h1 {
-  	font-family: 'Signika', sans-serif; //Emerald logo font
+    font-family: "Signika", sans-serif; //Emerald logo font
     font-weight: 600;
   }
   &:after {
-  	display: block;
-    content: '';
-    width: 5rem;
-    height: 1px;
+    display: block;
+    content: "";
+    width: 10rem;
+    height: 2px;
     margin: 23px auto;
     background-color: lighten($text-color, 70%);
   }
@@ -156,23 +159,31 @@ html, body {
   li {
     list-style-type: none;
   }
+
+  p {
+    text-align: justify;
+  }
 }
 
 #post-page {
   margin-bottom: 1.5em;
   @media (min-width: 940px) {
-      margin-bottom: 1.3334em;
-    }
+    margin-bottom: 1.3334em;
+  }
+
+  p {
+    text-align: justify;
+  }
 }
 
-.post+.post:before {
-    display: block;
-    content: '';
-    width: 5rem;
-    height: 1px;
-    margin: 23px auto;
-    background-color: lighten($text-color, 70%);
-  }
+.post + .post:before {
+  display: block;
+  content: "";
+  width: 10rem;
+  height: 2px;
+  margin: 23px auto;
+  background-color: lighten($text-color, 70%);
+}
 
 .by-line {
   display: block;
@@ -195,14 +206,14 @@ img {
   margin: 0 auto;
   margin-bottom: 24px;
   -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-      -ms-border-radius: 4px;
-          border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
 }
 
 img[title="Emerald"] {
-    box-shadow: 0 2px 6px #ddd;
-  }
+  box-shadow: 0 2px 6px #ddd;
+}
 
 code {
   color: lighten($text-color, 35%);
@@ -211,7 +222,8 @@ code {
 
 /* Set the vertical rhythm (and padding-left) for lists inside post content */
 
-.content ul, .content ol {
+.content ul,
+.content ol {
   line-height: 1.5em; /* 24px/16px */
   padding-left: 1.5em;
   @media (min-width: 940px) {
@@ -221,7 +233,8 @@ code {
 
 /* Pages */
 
-#page ul, #page ol {
+#page ul,
+#page ol {
   padding-left: 1.5em;
 }
 
@@ -245,9 +258,9 @@ code {
   font-weight: 400;
   padding: 0.5em 1em;
   -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-      -ms-border-radius: 4px;
-          border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
 }
 
 /* Footer */
@@ -256,21 +269,41 @@ footer {
   background-color: $main-color;
   color: $background-color;
   text-align: center;
-  padding: 0.6667em 0;
+  padding: 0.5em 0;
 }
 
 #wrap {
-	min-height:100%; 
-	position:relative;
-	padding-bottom: 105px;
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 105px;
 }
 
 .footer {
-	padding: 25px 0;
-	background-color: $main-color;
-	color: $background-color;
-	text-align: center;
-	position: absolute;
+  padding: 18px 0;
+  background-color: $main-color;
+  color: $background-color;
+  text-align: center;
+  position: absolute;
   width: 100%;
   bottom: 0;
+}
+
+/* Logo Animation on scroll */
+.box {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 20vh 0;
+}
+
+.box.box-back {
+  transform: translateZ(0);
+  z-index: 99;
+  text-align: center;
+}
+.box.box-front {
+  width: 1500px;
+  transform: translateZ(-1px) scale(2);
 }
