--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,35 @@
 layout: default
 ---
 <article id="post-page">
-	<h2>{{ page.title }}</h2>		
+	<h2>{{ page.title }}</h2>
+	<!-- AddToAny BEGIN -->
+	<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+	<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+	<a class="a2a_button_facebook"></a>
+	<a class="a2a_button_twitter"></a>
+	<a class="a2a_button_email"></a>
+	<a class="a2a_button_whatsapp"></a>
+	<a class="a2a_button_copy_link"></a>
+	</div>
+	<script async src="https://static.addtoany.com/menu/page.js"></script>
+	<!-- AddToAny END -->
 	<time datetime="{{ page.date | date_to_xmlschema }}" class="by-line">{{ page.date | date_to_string }}</time>
 	<div class="content">
 
 		{{ content }}
-		
-	</div>
-</article>
 
+	</div>
+
+	<!-- LikeBtn.com BEGIN -->
+	<span class="likebtn-wrapper"></span>
+	<script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
+	<!-- LikeBtn.com END -->
+	
+	<form action="/action_page.php" id="usrform">
+  Name: <input type="text" name="usrname">
+  <input type="submit">
+</form>
+<br>
+<textarea rows="4" cols="50" name="comment" form="usrform">
+Enter text here...</textarea>
+</article>
